1. Update template 2. Add Ajax to table schoolYearList page

--- a/project/src/main/resources/templates/manageEmulation/history.html
+++ b/project/src/main/resources/templates/manageEmulation/history.html
@@ -62,78 +62,115 @@
             </div>
         </div>
         <div class="violation-by-date mt-5">
-            <div class="column-labels">
-                <label class="violation-date">Ngày</label>
-                <label class="violation-details">Mô tả lỗi</label>
-                <label class="violation-substract-grade">Điểm trừ</label>
-                <label class="violation-quantity">Số lần</label>
-                <label class="violation-total">Tổng điểm trừ</label>
+            <div class="violation-description my-2">
+                <div class="violation-date">
+                    <span>Thứ 2 - 07/06/2020</span>
+                </div>
+                <div class="violation-details">
+                    <div class="violation-name">
+                        <span class="font-500">Mô tả lỗi: </span>
+                        <span>Đi lại lộn xộn</span>
+                    </div>
+                    <p class="violation-note my-0">
+                        <span class="font-500">Ghi chú: </span>
+                        <span>A và B đi lại lộn xộn trong lớp</span>
+                    </p>
+                </div>
+                <div class="violation-substract-grade">
+                    <span class="font-500">Điểm trừ: </span>
+                    <span>0.2</span>
+                </div>
+                <div class="violation-quantity">
+                    <span class="font-500">Số lần: </span>
+                    <span>2</span>
+                </div>
+                <div class="violation-total">
+                    <span class="font-500">Tổng điểm trừ: </span>
+                    <span>0.4</span>
+                </div>
+            </div>
+            <div class="violation-description my-2">
+                <div class="violation-date">
+                    <span>Thứ 2 - 07/06/2020</span>
+                </div>
+                <div class="violation-details">
+                    <div class="violation-name">
+                        <span class="font-500">Mô tả lỗi: </span>
+                        <span>Đi lại lộn xộn</span>
+                    </div>
+                    <p class="violation-note my-0">
+                        <span class="font-500">Ghi chú: </span>
+                        <span>A và B đi lại lộn xộn trong lớp</span>
+                    </p>
+                </div>
+                <div class="violation-substract-grade">
+                    <span class="font-500">Điểm trừ: </span>
+                    <span>0.2</span>
+                </div>
+                <div class="violation-quantity">
+                    <span class="font-500">Số lần: </span>
+                    <span>2</span>
+                </div>
+                <div class="violation-total">
+                    <span class="font-500">Tổng điểm trừ: </span>
+                    <span>0.4</span>
+                </div>
+            </div>
+            <div class="violation-description my-2">
+                <div class="violation-date">
+                    <span>Thứ 2 - 07/06/2020</span>
+                </div>
+                <div class="violation-details">
+                    <div class="violation-name">
+                        <span class="font-500">Mô tả lỗi: </span>
+                        <span>Đi lại lộn xộn</span>
+                    </div>
+                    <p class="violation-note my-0">
+                        <span class="font-500">Ghi chú: </span>
+                        <span>A và B đi lại lộn xộn trong lớp</span>
+                    </p>
+                </div>
+                <div class="violation-substract-grade">
+                    <span class="font-500">Điểm trừ: </span>
+                    <span>0.2</span>
+                </div>
+                <div class="violation-quantity">
+                    <span class="font-500">Số lần: </span>
+                    <span>2</span>
+                </div>
+                <div class="violation-total">
+                    <span class="font-500">Tổng điểm trừ: </span>
+                    <span>0.4</span>
+                </div>
+            </div>
+            <div class="violation-description my-2">
+                <div class="violation-date">
+                    <span>Thứ 2 - 07/06/2020</span>
+                </div>
+                <div class="violation-details">
+                    <div class="violation-name">
+                        <span class="font-500">Mô tả lỗi: </span>
+                        <span>Đi lại lộn xộn</span>
+                    </div>
+                    <p class="violation-note my-0">
+                        <span class="font-500">Ghi chú: </span>
+                        <span>A và B đi lại lộn xộn trong lớp</span>
+                    </p>
+                </div>
+                <div class="violation-substract-grade">
+                    <span class="font-500">Điểm trừ: </span>
+                    <span>0.2</span>
+                </div>
+                <div class="violation-quantity">
+                    <span class="font-500">Số lần: </span>
+                    <span>2</span>
+                </div>
+                <div class="violation-total">
+                    <span class="font-500">Tổng điểm trừ: </span>
+                    <span>0.4</span>
+                </div>
             </div>
 
-            <div class="violation-description my-2">
-                <div class="violation-date">
-                    <span>Thứ 2 - 07/06/2020</span>
-                </div>
-                <div class="violation-details">
-                    <div class="violation-name">Đi lại lộn xộn</div>
-                    <p class="violation-note my-0">A và B đi lại lộn xộn trong lớp</p>
-                </div>
-                <div class="violation-substract-grade">0.2</div>
-                <div class="violation-quantity">
-                    <span>2</span>
-                </div>
-                <div class="violation-total">
-                    <span>0.4</span>
-                </div>
-            </div>
-            <div class="violation-description my-2">
-                <div class="violation-date">
-                    <span>Thứ 2 - 07/06/2020</span>
-                </div>
-                <div class="violation-details">
-                    <div class="violation-name">Đi lại lộn xộn</div>
-                    <p class="violation-note my-0">A và B đi lại lộn xộn trong lớp</p>
-                </div>
-                <div class="violation-substract-grade">0.2</div>
-                <div class="violation-quantity">
-                    <span>2</span>
-                </div>
-                <div class="violation-total">
-                    <span>0.4</span>
-                </div>
-            </div>
-            <div class="violation-description my-2">
-                <div class="violation-date">
-                    <span>Thứ 2 - 07/06/2020</span>
-                </div>
-                <div class="violation-details">
-                    <div class="violation-name">Đi lại lộn xộn</div>
-                    <p class="violation-note my-0">A và B đi lại lộn xộn trong lớp</p>
-                </div>
-                <div class="violation-substract-grade">0.2</div>
-                <div class="violation-quantity">
-                    <span>2</span>
-                </div>
-                <div class="violation-total">
-                    <span>0.4</span>
-                </div>
-            </div>
-            <div class="violation-description my-2">
-                <div class="violation-date">
-                    <span>Thứ 2 - 07/06/2020</span>
-                </div>
-                <div class="violation-details">
-                    <div class="violation-name">Đi lại lộn xộn</div>
-                    <p class="violation-note my-0">A và B đi lại lộn xộn trong lớp</p>
-                </div>
-                <div class="violation-substract-grade">0.2</div>
-                <div class="violation-quantity">
-                    <span>2</span>
-                </div>
-                <div class="violation-total">
-                    <span>0.4</span>
-                </div>
-            </div>
         </div>
     </div>
 </div>
