--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -1171,133 +1171,45 @@ fieldset .note {
 }
 
 /* Global "table" column settings */
-.column-labels {
-    display: flex;
-    margin-bottom: 12px;
-    color: #888;
-    font-size: 1.1rem;
-    padding: 0 20px;
-}
 
 .violation-date {
-    width: 15%;
+    font-size: 1.2rem;
     font-weight: 500;
-}
-
-.violation-details {
-    width: 40%;
-}
-
-.violation-substract-grade,
-.violation-quantity,
-.violation-total,
-.violation-action {
-    width: 11.3%;
-    text-align: center;
-}
-
-.violation-description {
-    display: flex;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-}
-
-.violation-name {
-    font-weight: 500;
-}
-
-.totals-footer {
-    margin-top: 30px;
-}
-
-.totals-footer .totals-item {
-    float: right;
-    clear: both;
-    width: 100%;
     margin-bottom: 10px;
 }
 
-.totals-footer .totals-item label {
-    float: left;
-    width: 79%;
-    text-align: right;
-    font-weight: 500;
+.violation-description {
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    position: relative;
 }
 
-.totals-footer .totals-item .totals-value {
-    float: right;
-    width: 21%;
-    text-align: right;
+.violation-date, .violation-details,
+.violation-substract-grade, .violation-quantity,
+.violation-total {
+    width: calc(100% - 160px);
 }
 
-@media screen and (max-width: 650px) {
-    .column-labels {
-        display: none;
-    }
+.violation-action {
+    position: absolute;
+    top: 40%;
+    right: 20px;
+    width: auto;
+}
 
-    .violation-description {
-        margin-bottom: 20px;
-        padding-bottom: 10px;
-        border-bottom: 1px solid #eee;
-        display: table;
-        width: 100%;
-        position: relative;
-    }
-
-    .violation-date {
-        width: 100%;
-        font-size: 1.2rem;
-    }
-
-    .violation-details {
-        width: 100%;
-        margin: 10px 0;
-    }
-
-    .violation-substract-grade, .violation-quantity {
-        width: auto;
-        display: inline-block;
-        margin: 0 10px;
-    }
-
-    .violation-substract-grade:before {
-        content: 'Điểm trừ: ';
-        font-weight: 500;
-    }
-
-    .violation-quantity:before {
-        content: 'Số lượng: ';
-        font-weight: 500;
-    }
-
-    .violation-total {
-        width: auto;
-        text-align: left;
-        margin: 10px 0 0 10px;
-    }
-
-    .violation-total:before {
-        content: 'Tổng điểm trừ: ';
-        font-weight: 500;
-    }
-
-    .violation-action {
-        position: absolute;
-        top: 40%;
-        right: 20px;
-        width: auto;
-    }
+.violationTypeName {
+    width: calc(100% - 50px);
 }
 
 .modal-body .panel-title {
     font-size: 1.2rem;
-    margin: 20px;
-    margin-bottom: 0;
+    margin: auto;
+    width: 80%;
     padding: 10px;
     background: #f5f5f5;
     border: 1px solid #ddd;
-    border-radius: 5px;
+    border-radius: 5px 5px 0 0;
     font-weight: 500;
 }
 
@@ -1306,7 +1218,7 @@ fieldset .note {
     width: 80%;
     margin: auto;
     padding: 15px;
-    border-radius: 5px;
+    border-radius: 0 0 5px 5px;
     text-align: left;
     padding-left: 30px;
 }
