--- a/project/src/main/resources/templates/manageEmulation/gradingToEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/gradingToEmulation.html
@@ -36,19 +36,19 @@
                 </div>
                 <div class="col-xl-2 d-inline-block"></div>
                 <div class="col-xl-4 d-inline-block">
-                    <div class="search-line" id="datetime">
+                    <div class="search-line" >
                         <span>Ngày</span>
-                        <input type="date">
+                        <input type="date" id="datetime">
                     </div>
                 </div>
             </div>
         </div>
         <div class="panel panel-default">
             <div class="panel-heading mt-3" data-toggle="collapse" data-target="#collapseOne" onclick="toggleClick()">
-                <div>
-                    <div class="d-flex align-items-center"><h5 class="my-0 mr-2">Nội quy theo dõi: </h5>15 phút truy bài
-                        đầu giờ
-                    </div>
+                <div class="violationTypeName">
+                    <span><h5 class="my-0 mr-2 d-inline">Nội quy theo dõi: </h5>
+                        <span>15 phút truy bài đầu giờ</span>
+                    </span>
                     <div class="d-flex align-items-center"><h6 class="my-0 mr-2">Điểm trừ:</h6> 3</div>
                 </div>
                 <button><i class="fa fa-chevron-down rotate"></i></button>
@@ -157,21 +157,21 @@
                     <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                 </div>
                 <div class="modal-body">
-                    <table class="table">
-                        <thead>
-                        <th>Mô tả lỗi</th>
-                        <th>Điểm trừ</th>
-                        <th>Số lần</th>
-                        <th>Tổng điểm trừ</th>
+                    <table class="table table-bordered">
+                        <thead class="bg-light text-center">
+                        <td>Mô tả lỗi</td>
+                        <td>Điểm trừ</td>
+                        <td>Số lần</td>
+                        <td>Tổng điểm trừ</td>
                         </thead>
                         <tbody>
                         <td>
                             <p class="mb-0">Đi lại lộn xộn, làm việc riêng, ăn quà</p>
                             <small class="text-red">A đi lại lộn xộn trong lớp</small>
                         </td>
-                        <td>0.2</td>
-                        <td>2</td>
-                        <td>0.40</td>
+                        <td class="text-center">0.2</td>
+                        <td class="text-center">2</td>
+                        <td class="text-center">0.4</td>
                         </tbody>
                     </table>
 
