--- a/project/src/main/resources/templates/import.html
+++ b/project/src/main/resources/templates/import.html
@@ -3,7 +3,7 @@
 <!--<head>-->
 <!--    <meta charset="UTF-8">-->
 <!--    &lt;!&ndash; jQuery library &ndash;&gt;-->
-<!--    <script th:src="@{/js/jquery-3.5.1.min.js}"></script>-->
+<!--    <script th:src="@{/js/public/jquery-3.5.1.min.js}"></script>-->
 <!--    <title>Title</title>-->
 <!--</head>-->
 <!--<body>-->
