--- a/project/src/main/resources/templates/manageClass/manageClass.html
+++ b/project/src/main/resources/templates/manageClass/manageClass.html
@@ -6,20 +6,20 @@
     <link th:href="@{/img/logo.png}" rel="shortcut icon" type="image/x-icon"/>
 
     <!-- jQuery library -->
-    <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
-
+    <script th:src="@{/js/public/jquery-3.5.1.min.js}"></script>
+    <!--Table-->
+    <link rel="stylesheet" th:href="@{/css/dataTables.bootstrap4.min.css}">
+    <script type="text/javascript" th:src="@{/js/public/jquery.dataTables.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/public/dataTables.bootstrap4.min.js}"></script>
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <script th:src="@{/js/popper.min.js}"></script>
-    <script th:src="@{/js/bootstrap.min.js}"></script>
+    <script th:src="@{/js/public/popper.min.js}"></script>
+    <script th:src="@{/js/public/popper.min.js}"></script>
     <!--Font-Awesome-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" rel="stylesheet"/>
+
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/functions.js}"></script>
-    <!--Table-->
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.19/css/dataTables.bootstrap4.min.css">
-    <script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
@@ -42,6 +42,9 @@
                             <option value="12">12</option>
                         </select>
                     </div>
+                </div>
+                <div class="col-xl-1 d-inline-block"></div>
+                <div class="col-xl-4 d-inline-block">
                     <div class="search-line">
                         <span>Trạng thái</span>
                         <select class="combobox searchable" id="status">
@@ -50,25 +53,6 @@
                             <option value="1">Khóa</option>
                         </select>
                     </div>
-
-                </div>
-                <div class="col-xl-1 d-inline-block"></div>
-                <div class="col-xl-4 d-inline-block">
-                    <div class="search-line">
-                        <span>Sắp xếp theo</span>
-                        <select class="combobox searchable" id="orderBy">
-                            <option value="0" selected="selected">Tên định danh</option>
-                            <option value="1">Khối</option>
-                        </select>
-                    </div>
-                    <div class="search-line">
-                        <span>Thứ tự</span>
-                        <select class="combobox searchable" id="sortBy">
-                            <option value="0">Giảm dần</option>
-                            <option value="1" selected="selected">Tăng dần</option>
-                        </select>
-                    </div>
-
                 </div>
                 <div class="d-inline-block ml-2">
                     <button class="btn btn-search" id="search">Tìm kiếm</button>
@@ -89,10 +73,9 @@
                 <span class="status-deactive"><i class="fa fa-circle" aria-hidden="true"></i></span> Khóa
             </div>
         </div>
-        <table class="table table-hover table-bordered text-center">
+        <table class="table table-bordered text-center" id="myTable">
             <thead class="thead-light">
             <tr class="align-items-center">
-                <th>STT</th>
                 <th>Khối</th>
                 <th>Hệ chuyên</th>
                 <th>Tên định danh</th>
