--- a/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
+++ b/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
@@ -6,17 +6,17 @@
     <link th:href="@{/img/logo.png}" rel="shortcut icon" type="image/x-icon"/>
 
     <!-- jQuery library -->
-    <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
+    <script th:src="@{/js/public/jquery-3.5.1.min.js}"></script>
 
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <script th:src="@{/js/popper.min.js}"></script>
-    <script th:src="@{/js/bootstrap.min.js}"></script>
+    <script th:src="@{/js/public/popper.min.js}"></script>
+    <script th:src="@{/js/public/popper.min.js}"></script>
     <!--Select2-->
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet"/>
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
+    <link rel="stylesheet" th:href="@{/css/select2.min.css}">
+    <script type="text/javascript" th:src="@{/js/public/select2.min.js}"></script>
     <!--Font-Awesome-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"
+    <link th:href="@{/css/front-awesome.css}" rel="stylesheet"
           type="text/css"/>
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/functions.js}"></script>
