--- a/project/src/main/resources/templates/manageEmulation/gradingToEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/gradingToEmulation.html
@@ -6,18 +6,21 @@
     <link th:href="@{/img/logo.png}" rel="shortcut icon" type="image/x-icon"/>
 
     <!-- jQuery library -->
-    <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
+    <script th:src="@{/js/public/jquery-3.5.1.min.js}"></script>
 
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <script th:src="@{/js/popper.min.js}"></script>
-    <script th:src="@{/js/bootstrap.min.js}"></script>
+    <script th:src="@{/js/public/popper.min.js}"></script>
+    <script th:src="@{/js/public/bootstrap.min.js}"></script>
+    <!--Select2-->
+    <link rel="stylesheet" th:href="@{/css/select2.min.css}">
+    <script th:src="@{/js/public/select2.min.js}"></script>
     <!--Font-Awesome-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"
-          type="text/css"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
+    <script th:src="@{/js/public/moment.min.js}"></script>
+
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/functions.js}"></script>
-    <script src="https://rawgit.com/Marak/faker.js/master/examples/browser/js/faker.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -30,116 +33,19 @@
                 <div class="col-xl-4 d-inline-block">
                     <div class="search-line">
                         <span>Lớp</span>
-                        <select class="combobox searchable" id="classList">
-                        </select>
+                        <select class="combobox searchable" id="classList"></select>
                     </div>
                 </div>
                 <div class="col-xl-2 d-inline-block"></div>
                 <div class="col-xl-4 d-inline-block">
                     <div class="search-line" >
                         <span>Ngày</span>
-                        <input type="date" id="datetime">
+                        <input type="date" class="searchable" id="datetime">
                     </div>
                 </div>
             </div>
         </div>
-        <div class="panel panel-default">
-            <div class="panel-heading mt-3" data-toggle="collapse" data-target="#collapseOne" onclick="toggleClick()">
-                <div class="violationTypeName">
-                    <span><h5 class="my-0 mr-2 d-inline">Nội quy theo dõi: </h5>
-                        <span>15 phút truy bài đầu giờ</span>
-                    </span>
-                    <div class="d-flex align-items-center"><h6 class="my-0 mr-2">Điểm trừ:</h6> 3</div>
-                </div>
-                <button><i class="fa fa-chevron-down rotate"></i></button>
-            </div>
-            <div class="panel-collapse collapse in" id="collapseOne">
-                <table class="table table-responsive-customer">
-                    <thead>
-                    <th></th>
-                    <th>Vi phạm</th>
-                    <th>Điểm trừ</th>
-                    <th>Số lần</th>
-                    <th>Tổng điểm trừ</th>
-                    </thead>
-                    <tbody>
-                    <tr>
-                        <td>
-                            <span class="custom-checkbox ">
-                                <input id="1" type="checkbox" name="options" value="1">
-                                <label for="1"></label>
-                            </span>
-                        </td>
-                        <td>
-                            <div class="form-group text-left">
-                                <label for="violation1">Đi lại lộn xộn, làm việc riêng, ăn quà</label>
-                                <input type="text" class="form-control text-red" id="violation1"
-                                       placeholder="Ghi chú...">
-                            </div>
-                        </td>
-                        <td class="substract">0.2</td>
-                        <td>
-                            <div class="quantity d-flex">
-                                <button class="btn-decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
-                                <input class="quantity-input" type="number" value="0" min="0">
-                                <button class="btn-increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
-                            </div>
-                        </td>
-                        <td class="total"></td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <span class="custom-checkbox ">
-                                <input id="2" type="checkbox" name="options" value="1">
-                                <label for="2"></label>
-                            </span>
-                        </td>
-                        <td>
-                            <div class="form-group text-left">
-                                <label for="violation2">Đi lại lộn xộn, làm việc riêng, ăn quà</label>
-                                <input type="text" class="form-control text-red" id="violation2"
-                                       placeholder="Ghi chú...">
-                            </div>
-                        </td>
-                        <td class="substract">0.2</td>
-                        <td>
-                            <div class="quantity d-flex">
-                                <button class="btn-decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
-                                <input class="quantity-input" type="number" value="0" min="0">
-                                <button class="btn-increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
-                            </div>
-                        </td>
-                        <td class="total"></td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <span class="custom-checkbox ">
-                                <input id="3" type="checkbox" name="options" value="1">
-                                <label for="3"></label>
-                            </span>
-                        </td>
-                        <td>
-                            <div class="form-group text-left">
-                                <label for="violation3">Đi lại lộn xộn, làm việc riêng, ăn quà</label>
-                                <input type="text" class="form-control text-red" id="violation3"
-                                       placeholder="Ghi chú...">
-                            </div>
-                        </td>
-                        <td class="substract">0.2</td>
-                        <td>
-                            <div class="quantity d-flex">
-                                <button class="btn-decrease"><i class="fa fa-minus" aria-hidden="true"></i></button>
-                                <input class="quantity-input" type="number" value="0" min="0">
-                                <button class="btn-increase"><i class="fa fa-plus" aria-hidden="true"></i></button>
-                            </div>
-                        </td>
-                        <td class="total"></td>
-                    </tr>
-
-                    </tbody>
-                </table>
-            </div>
-        </div>
+        <div class="panel panel-default"></div>
         <div class="saveResult">
             <a class="btn btn-customer" href="#confirmModal" data-toggle="modal">LƯU</a>
         </div>
