--- a/project/src/main/resources/templates/manageEmulation/history.html
+++ b/project/src/main/resources/templates/manageEmulation/history.html
@@ -6,20 +6,20 @@
     <link th:href="@{/img/logo.png}" rel="shortcut icon" type="image/x-icon"/>
 
     <!-- jQuery library -->
-    <script th:src="@{/js/jquery-3.5.1.min.js}"></script>
+    <script th:src="@{/js/public/jquery-3.5.1.min.js}"></script>
 
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
-    <script th:src="@{/js/popper.min.js}"></script>
-    <script th:src="@{/js/bootstrap.min.js}"></script>
+    <script th:src="@{/js/public/popper.min.js}"></script>
+    <script th:src="@{/js/public/bootstrap.min.js}"></script>
     <!--Select2-->
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet"/>
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
+    <link rel="stylesheet" th:href="@{/css/select2.min.css}">
+    <script th:src="@{/js/public/select2.min.js}"></script>
+    <script th:src="@{/js/public/moment.min.js}"></script>
     <!--Font-Awesome-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/functions.js}"></script>
-    <script src="https://rawgit.com/Marak/faker.js/master/examples/browser/js/faker.js" type="text/javascript"></script>
 
 </head>
 <body>
@@ -61,116 +61,7 @@
                 </div>
             </div>
         </div>
-        <div class="violation-by-date mt-5">
-            <div class="violation-description my-2">
-                <div class="violation-date">
-                    <span>Thứ 2 - 07/06/2020</span>
-                </div>
-                <div class="violation-details">
-                    <div class="violation-name">
-                        <span class="font-500">Mô tả lỗi: </span>
-                        <span>Đi lại lộn xộn</span>
-                    </div>
-                    <p class="violation-note my-0">
-                        <span class="font-500">Ghi chú: </span>
-                        <span>A và B đi lại lộn xộn trong lớp</span>
-                    </p>
-                </div>
-                <div class="violation-substract-grade">
-                    <span class="font-500">Điểm trừ: </span>
-                    <span>0.2</span>
-                </div>
-                <div class="violation-quantity">
-                    <span class="font-500">Số lần: </span>
-                    <span>2</span>
-                </div>
-                <div class="violation-total">
-                    <span class="font-500">Tổng điểm trừ: </span>
-                    <span>0.4</span>
-                </div>
-            </div>
-            <div class="violation-description my-2">
-                <div class="violation-date">
-                    <span>Thứ 2 - 07/06/2020</span>
-                </div>
-                <div class="violation-details">
-                    <div class="violation-name">
-                        <span class="font-500">Mô tả lỗi: </span>
-                        <span>Đi lại lộn xộn</span>
-                    </div>
-                    <p class="violation-note my-0">
-                        <span class="font-500">Ghi chú: </span>
-                        <span>A và B đi lại lộn xộn trong lớp</span>
-                    </p>
-                </div>
-                <div class="violation-substract-grade">
-                    <span class="font-500">Điểm trừ: </span>
-                    <span>0.2</span>
-                </div>
-                <div class="violation-quantity">
-                    <span class="font-500">Số lần: </span>
-                    <span>2</span>
-                </div>
-                <div class="violation-total">
-                    <span class="font-500">Tổng điểm trừ: </span>
-                    <span>0.4</span>
-                </div>
-            </div>
-            <div class="violation-description my-2">
-                <div class="violation-date">
-                    <span>Thứ 2 - 07/06/2020</span>
-                </div>
-                <div class="violation-details">
-                    <div class="violation-name">
-                        <span class="font-500">Mô tả lỗi: </span>
-                        <span>Đi lại lộn xộn</span>
-                    </div>
-                    <p class="violation-note my-0">
-                        <span class="font-500">Ghi chú: </span>
-                        <span>A và B đi lại lộn xộn trong lớp</span>
-                    </p>
-                </div>
-                <div class="violation-substract-grade">
-                    <span class="font-500">Điểm trừ: </span>
-                    <span>0.2</span>
-                </div>
-                <div class="violation-quantity">
-                    <span class="font-500">Số lần: </span>
-                    <span>2</span>
-                </div>
-                <div class="violation-total">
-                    <span class="font-500">Tổng điểm trừ: </span>
-                    <span>0.4</span>
-                </div>
-            </div>
-            <div class="violation-description my-2">
-                <div class="violation-date">
-                    <span>Thứ 2 - 07/06/2020</span>
-                </div>
-                <div class="violation-details">
-                    <div class="violation-name">
-                        <span class="font-500">Mô tả lỗi: </span>
-                        <span>Đi lại lộn xộn</span>
-                    </div>
-                    <p class="violation-note my-0">
-                        <span class="font-500">Ghi chú: </span>
-                        <span>A và B đi lại lộn xộn trong lớp</span>
-                    </p>
-                </div>
-                <div class="violation-substract-grade">
-                    <span class="font-500">Điểm trừ: </span>
-                    <span>0.2</span>
-                </div>
-                <div class="violation-quantity">
-                    <span class="font-500">Số lần: </span>
-                    <span>2</span>
-                </div>
-                <div class="violation-total">
-                    <span class="font-500">Tổng điểm trừ: </span>
-                    <span>0.4</span>
-                </div>
-            </div>
-
+        <div class="violation-by-date mt-5" id="violationList">
         </div>
     </div>
 </div>
