--- a/project/src/main/resources/templates/manageEmulation/assignEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/assignEmulation.html
@@ -7,7 +7,10 @@
 
     <!-- jQuery library -->
     <script th:src="@{/js/public/jquery-3.5.1.min.js}"></script>
-
+    <!--Table-->
+    <link rel="stylesheet" th:href="@{/css/dataTables.bootstrap4.min.css}">
+    <script th:src="@{/js/public/jquery.dataTables.min.js}"></script>
+    <script th:src="@{/js/public/dataTables.bootstrap4.min.js}"></script>
     <!--Bootstrap 4-->
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <script th:src="@{/js/public/popper.min.js}"></script>
