--- a/project/src/main/resources/templates/manageEmulation/history.html
+++ b/project/src/main/resources/templates/manageEmulation/history.html
@@ -34,7 +34,7 @@
                         <label>Từ ngày <span class="text-red">*</span></label>
                         <input type="date" class="form-control" id="fromDate">
                     </div>
-                    <label class="col-md-1 text-center">-</label>
+                    <label class="col-md-1 text-center"></label>
                     <div class="form-group col-xl-3 col-sm-12 text-left">
                         <label>Đến ngày <span class="text-red">*</span></label>
                         <input type="date" class="form-control" id="toDate">
@@ -49,9 +49,9 @@
                     <div class="form-group col-xl-3 col-sm-12 text-left">
                         <label>Khóa <span class="text-red">*</span></label>
                         <div class="col-xl-12 d-flex justify-content-between align-items-center px-0">
-                            <input type="number" class="form-control col-md-5" id="fromYear">
+                            <input type="number" class="form-control col-md-5 col-sm-5" id="fromYear">
                             <span class="col-sm-1 text-center"> - </span>
-                            <input type="number" class="form-control col-md-5" id="toYear" disabled>
+                            <input type="number" class="form-control col-md-5 col-sm-5" id="toYear" disabled>
                         </div>
                     </div>
                 </div>
