1. Update login page 2. Add API for assignEmulation page 3. Add API for gradingToEmulation page

--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -1232,7 +1232,11 @@ fieldset .note {
 }
 
 /*Responsive table max-width:650px*/
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 700px) {
+    .panel-collapse table {
+        width: 100%;
+    }
+
     .table-responsive-customer {
         display: block;
     }
