--- a/project/src/main/resources/templates/manageAccount/login.html
+++ b/project/src/main/resources/templates/manageAccount/login.html
@@ -14,8 +14,7 @@
     <script th:src="@{/js/public/popper.min.js}"></script>
     <script th:src="@{/js/public/bootstrap.min.js}"></script>
     <!--Font-Awesome-->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"
-          type="text/css"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" rel="stylesheet"/>
 
     <link th:href="@{/css/style.css}" rel="stylesheet"/>
     <script type="text/javascript" th:src="@{/js/functions.js}"></script>
@@ -42,49 +41,22 @@
                         <input type="password" class="form-control" id="password" required>
                     </div>
                     <div class="error login-err text-left"></div>
-                    <input type="button" name="signin" id="signin" class="form-submit" value="ĐĂNG NHẬP"/>
+                    <input type="button" name="signin" id="signin" class="form-submit" data-toggle="modal"
+                           value="ĐĂNG NHẬP"/>
                 </fieldset>
             </form>
         </div>
     </div>
-
-<!--    <div class="signin-form col-xl-4 col-md-auto">-->
-<!--        <div class="login-form-title">-->
-<!--            <img src="https://img.icons8.com/clouds/130/000000/school.png"/>-->
-<!--            <h3 class="form-title">Đăng nhập</h3>-->
-<!--            <p class="form-title-description">Vui lòng điền vào các trường sau để đăng nhập</p>-->
-<!--        </div>-->
-<!--        <form method="POST" class="login-form" id="login-form">-->
-<!--            <div class="form-group">-->
-<!--                <div class="form-group-input">-->
-<!--                    <label class="input-text"><i class="fa fa-user"></i></label>-->
-<!--                    <input type="text" id="username" name="username" placeholder="Tên đăng nhập" required/>-->
-<!--                </div>-->
-<!--            </div>-->
-
-<!--            <div class="form-group">-->
-<!--                <div class="form-group-input">-->
-<!--                    <label class="input-text"><i class="fa fa-lock"></i></label>-->
-<!--                    <input type="password" id="password" name="password" placeholder="Mật khẩu" required/>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="error login-err"></div>-->
-<!--            <div class="form-group form-button">-->
-<!--                <input type="button" name="signin" id="signin" class="form-submit" value="ĐĂNG NHẬP"/>-->
-<!--            </div>-->
-<!--            <div class="form-group text-center">-->
-<!--                <a th:href="@{forgotPassword}">Quên mật khẩu?</a>-->
-<!--            </div>-->
-<!--        </form>-->
-<!--    </div>-->
 </div>
+<div th:replace="fragments/footer :: footer"></div>
+<div class="modal-loading"></div>
 
 <!--    Modal Login Success-->
-<div class="modal" tabindex="-1" role="dialog" id="loginSuccess">
+<div class="modal fade" tabindex="-1" role="dialog" id="loginSuccess">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-body text-center">
-                <img class="mb-3 mt-3" src="https://img.icons8.com/material/100/007bff/ok--v1.png"/>
+                <img class="mb-3 mt-3" th:src="@{img/img-success.png}"/>
                 <h5>Đăng nhập thành công!</h5>
             </div>
             <div class="modal-footer">
@@ -94,8 +66,6 @@
     </div>
 </div>
 
-<div th:replace="fragments/footer :: footer"></div>
-<div class="modal-loading"></div>
 </body>
 <script type="text/javascript" th:src="@{/js/manageAccount/login.js}"></script>
 </html>
