Add API for viewRequest page

--- a/project/src/main/resources/templates/manageEmulation/viewRequest.html
+++ b/project/src/main/resources/templates/manageEmulation/viewRequest.html
@@ -74,7 +74,7 @@
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
-                <input type="button" class="btn btn-primary" data-dismiss="modal" value="ĐÓNG">
+                <a href="viewRequest" class="btn btn-primary">ĐÓNG</a>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
         <div class="modal-content">
             <div class="modal-body text-center"></div>
             <div class="modal-footer">
-                <input type="button" class="btn btn-primary" data-dismiss="modal" value="ĐÓNG">
+                <a href="viewRequest" class="btn btn-primary">ĐÓNG</a>
             </div>
         </div>
     </div>
