Fix dialog modal of createteacher page

--- a/project/src/main/resources/templates/manageTeacher/createTeacher.html
+++ b/project/src/main/resources/templates/manageTeacher/createTeacher.html
@@ -46,7 +46,7 @@
                         <input type="email" class="form-control" id="email" placeholder="anv@gmail.com">
                     </div>
                     <div class="error createTeacher-err text-left"></div>
-                    <input type="button" data-toggle="modal" data-target="#createSuccess" id="submit" class="submit action-button" value="TẠO"/>
+                    <input type="button" data-toggle="modal" id="submit" class="submit action-button" value="TẠO"/>
                 </fieldset>
             </form>
         </div>
