Fix template and API for viewRequest page

--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -1233,8 +1233,20 @@ fieldset .note {
 
 /*Responsive table max-width:650px*/
 @media screen and (max-width: 700px) {
+    .table-wrapper {
+        margin: 0;
+    }
+
+    .modal-body .panel-body,
     .panel-collapse table {
         width: 100%;
+    }
+
+    .search .d-inline-block.ml-2 {
+        display: block !important;
+        text-align: right;
+        margin-right: 5px;
+        margin-top: 15px;
     }
 
     .table-responsive-customer {
