--- a/project/src/main/resources/templates/manageEmulation/viewRequest.html
+++ b/project/src/main/resources/templates/manageEmulation/viewRequest.html
@@ -65,6 +65,7 @@
             </div>
         </div>
         <div class="panel panel-default"></div>
+        <div class="table-paging">
     </div>
 </div>
 
