--- a/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
+++ b/project/src/main/resources/templates/manageEmulation/violationListOfClass.html
@@ -34,12 +34,14 @@
                         <span>Lớp</span>
                         <select class="combobox searchable" id="classList"></select>
                     </div>
+                </div>
+                <div class="col-xl-2 d-inline-block div-space"></div>
+                <div class="col-xl-4 d-inline-block">
                     <div class="search-line">
                         <span>Ngày</span>
                         <input type="date" class="searchable" id="datetime">
                     </div>
                 </div>
-                <div class="col-xl-6 d-inline-block"></div>
                 <div class="d-inline-block ml-2">
                     <button class="btn btn-search" id="search">Tìm kiếm</button>
                 </div>
