--- a/project/src/main/resources/templates/manageTeacher/manageTeacher.html
+++ b/project/src/main/resources/templates/manageTeacher/manageTeacher.html
@@ -29,7 +29,7 @@
                     <span>Họ và tên</span>
                     <input type="text" placeholder="Họ và tên">
                 </div>
-                <div class="col-xl-2 d-inline-block"></div>
+                <div class="col-xl-2 d-inline-block div-space"></div>
                 <div class="col-xl-4 d-inline-block search-line">
                     <span>Thứ tự</span>
                     <select class="combobox searchable" id="orderBy">
