--- a/project/src/main/resources/templates/manageClass/manageClass.html
+++ b/project/src/main/resources/templates/manageClass/manageClass.html
@@ -52,7 +52,7 @@
                     </div>
 
                 </div>
-                <div class="col-xl-1 d-inline-block"></div>
+                <div class="col-xl-1 d-inline-block div-space"></div>
                 <div class="col-xl-4 d-inline-block">
                     <div class="search-line">
                         <span>Sắp xếp theo</span>
