--- a/project/src/main/resources/templates/manageEmulation/assignEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/assignEmulation.html
@@ -41,7 +41,7 @@
                         <select class="combobox searchable" id="classList"></select>
                     </div>
                 </div>
-                <div class="col-xl-2 d-inline-block"></div>
+                <div class="col-xl-2 d-inline-block div-space"></div>
                 <div class="col-xl-4 d-inline-block">
                     <div class="search-line">
                         <span>Sao đỏ</span>
