--- a/project/src/main/resources/templates/manageSchoolRank/rankByMonth.html
+++ b/project/src/main/resources/templates/manageSchoolRank/rankByMonth.html
@@ -37,7 +37,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-xl-6 d-inline-block"></div>
+                <div class="col-xl-6 d-inline-block div-space"></div>
                 <div class="d-inline-block ml-2">
                     <button class="btn btn-search" id="search">Tìm kiếm</button>
                 </div>
