--- a/project/src/main/resources/templates/timetable/timetableTeacher.html
+++ b/project/src/main/resources/templates/timetable/timetableTeacher.html
@@ -34,7 +34,7 @@
                         </select>
                     </div>
                 </div>
-                <div class="col-xl-1 d-inline-block"></div>
+                <div class="col-xl-1 d-inline-block div-space"></div>
                 <div class="col-xl-4 d-inline-block">
                     <div class="search-line">
                         <span>Giáo viên</span>
