Update template gradingToEmulation page

--- a/project/src/main/resources/templates/manageEmulation/gradingToEmulation.html
+++ b/project/src/main/resources/templates/manageEmulation/gradingToEmulation.html
@@ -28,26 +28,25 @@
 <div class="container">
     <div class="table-wrapper">
         <div class="table-title">
-            <h2>Chấm điểm thi đua</h2>
-            <div class="search">
-                <div class="col-xl-4 d-inline-block">
-                    <div class="search-line">
-                        <span>Lớp</span>
-                        <select class="combobox searchable" id="classList"></select>
+            <h2>CHẤM ĐIỂM THI ĐUA</h2>
+            <div class="search row">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
+                    <div class="form-group text-left mb-1">
+                        <label>Lớp:</label>
+                        <select class="form-control w-75" id="classList"></select>
                     </div>
                 </div>
-                <div class="col-xl-2 d-inline-block div-space"></div>
-                <div class="col-xl-4 d-inline-block">
-                    <div class="search-line">
-                        <span>Ngày</span>
-                        <input type="date" class="searchable" id="datetime">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 px-0">
+                    <div class="form-group mb-1">
+                        <label>Ngày:</label>
+                        <input type="date" class="form-control w-75"  id="datetime">
                     </div>
                 </div>
             </div>
         </div>
         <div class="panel panel-default"></div>
-        <div class="saveResult">
-            <input type="button" class="btn btn-customer" data-toggle="modal" id="saveGrading" value="LƯU"/>
+        <div class="saveResult text-right">
+            <input type="button" class="btn btn-customer my-3" data-toggle="modal" id="saveGrading" value="LƯU"/>
         </div>
     </div>
 </div>
