--- a/project/src/main/resources/static/css/style.css
+++ b/project/src/main/resources/static/css/style.css
@@ -416,20 +416,6 @@ body.loading .modal-loading {
     font-size: 18px;
 }
 
-/*.login-form .form-group input[type=text], .form-group input[type=password] {*/
-/*    width: 100%;*/
-/*    display: block;*/
-/*    border: none;*/
-/*    border-bottom: 1px solid #999;*/
-/*    padding: 6px 30px;*/
-/*    outline: none;*/
-/*    background: transparent;*/
-/*}*/
-
-/*.login-form .form-group input[type=text]:focus, .form-group input[type=password]:focus {*/
-/*    border-bottom: 1px solid #222;*/
-/*}*/
-
 .form-button {
     text-align: center;
 }
@@ -450,6 +436,15 @@ body.loading .modal-loading {
     background: #4292dc;
 }
 
+.select2-container {
+    display: block;
+    width: 75%;
+}
+
+.select2-container--default.select2-container--disabled .select2-selection--single {
+    background-color: #e9ecef;
+}
+
 .error {
     color: red;
     font-weight: 500;
@@ -465,13 +460,16 @@ body.loading .modal-loading {
 /*Manage Account*/
 
 .table-wrapper {
-    margin: 30px 0;
     padding: 20px 25px;
 }
 
 .table-title {
     align-items: center;
-    padding: 10px 0;
+    padding: 10px 0 0 0;
+}
+
+.table-title h2 {
+    font-size: 1.8rem;
 }
 
 .table-title-2 {
@@ -602,18 +600,18 @@ tr.selected {
 /* Custom checkbox */
 .custom-checkbox {
     position: relative;
-    margin-left: 10px;
+    vertical-align: middle;
 }
 
 .custom-checkbox input[type="checkbox"] {
     opacity: 0;
     position: absolute;
-    margin: 5px 0 0 3px;
     z-index: 9;
 }
 
 .custom-checkbox label {
     position: relative;
+    margin: 0;
 }
 
 .custom-checkbox label:before {
@@ -623,7 +621,6 @@ tr.selected {
 
 .custom-checkbox label:before {
     content: '';
-    margin-right: 10px;
     display: inline-block;
     vertical-align: text-top;
     background: white;
@@ -1097,6 +1094,10 @@ fieldset .note {
 /*END Timetable*/
 
 /*violation list*/
+.panel-default .panel-heading:first-child {
+    margin-top: 0 !important;
+}
+
 .panel-heading:hover {
     cursor: pointer;
 }
@@ -1146,7 +1147,7 @@ fieldset .note {
 
 .panel-collapse table {
     width: 80%;
-    margin: 20px auto 0 auto;
+    margin: 0 auto;
     border: 1px solid rgb(227, 227, 227);
 }
 
@@ -1247,16 +1248,14 @@ fieldset .note {
     vertical-align: middle;
     text-align: center;
 }
+
 .table-responsive-customer td:nth-of-type(2) {
     max-width: 435px;
 
 }
+
 /*Responsive table max-width:650px*/
 @media screen and (max-width: 700px) {
-    .table-wrapper {
-        margin: 0;
-    }
-
     .div-space {
         display: none !important;
     }
@@ -1293,10 +1292,10 @@ fieldset .note {
 
     .table-responsive-customer td:nth-of-type(1) {
         position: absolute;
-        top: .75rem;
         border: none;
         padding-left: 0;
         padding-right: 0;
+        margin-left: 13px;
     }
 
     .table-responsive-customer td:nth-of-type(2) {
